--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "phpnomad/tasks",
     "description": "",
+    "version": "1.0.0",
     "type": "library",
     "homepage": "https://github.com/phpnomad/tasks",
     "readme": "README.md",
